<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Path To FBLA</string>

    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>

    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_out">Sign Out</string>
    <string name="continueButton">Continue</string>
    <string name="high_score_notification">New High Score Achieved!</string>

    <string name="no_chart_data_error">*Please take more quizzes to see chart statistics</string>
</resources>