<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_green"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/superLinearContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/path_to_fbla_logo_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <!--<EditText-->
            <!--android:id="@+id/emailTextView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:backgroundTint="@color/dark_grey"-->
            <!--android:drawableStart="@drawable/ic_email_black_24dp"-->
            <!--android:drawablePadding="10dp"-->
            <!--android:ems="10"-->
            <!--android:hint="@string/email_address"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:textColor="@color/black"-->
            <!--android:textColorHint="@color/gray"-->
            <!--android:textCursorDrawable="@null"-->
            <!--android:textSize="18sp" />-->

            <!--<EditText-->
            <!--android:id="@+id/passwordTextView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:backgroundTint="@color/dark_grey"-->
            <!--android:drawableStart="@drawable/ic_lock_black_24dp"-->
            <!--android:drawablePadding="10dp"-->
            <!--android:ems="10"-->
            <!--android:hint="@string/password"-->
            <!--android:inputType="textPassword"-->
            <!--android:textColor="@color/black"-->
            <!--android:textColorHint="@color/gray"-->
            <!--android:textCursorDrawable="@null"-->
            <!--android:textSize="20sp" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/gray"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/gray"
                app:passwordToggleEnabled="true"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/dark_grey"
                android:insetLeft="4dp"
                android:insetRight="4dp"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/accountCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>